# UserManamgent.Service.API/Features/Companies/Commands/CreateCompany/CreateCompanyCommandValidator.cs
@@ -10,7 +10,6 @@ namespace UserManamgent.Service.API.Features.Companies.Commands.CreateCompany
             RuleFor(x => x.Email).EmailAddress().WithMessage(LocalizationKeys.Company.EmailInvalid).MaximumLength(256).When(x => !string.IsNullOrWhiteSpace(x.Email));
             RuleFor(x => x.Type).IsInEnum().WithMessage(LocalizationKeys.Company.TypeRequired);
             RuleFor(x => x.CountryId).NotEmpty().WithMessage(LocalizationKeys.Company.CountryRequired);
-            RuleFor(x => x.TierLevel).InclusiveBetween(1,5).WithMessage(LocalizationKeys.Company.TierLevelInvalid);
         }
     }
 }
